maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:13: error: '=' expected but ')' found.
def aGaucehToute()){
                  ^IslandMaze:32: error: illegal start of simple expression
}
^